<resources>
    <string name="action_import_old_pointers">Import Old Pointers</string>
    <string name="ad_banner_unit_id" translatable="false">ca-app-pub-6628325093439880/80845167643</string>
    <string name="ad_banner_new_pointer" translatable="false">ca-app-pub-6628325093439880/5238011519</string>
    <string name="ad_interstitial_1_id" translatable="false">ca-app-pub-6628325093439880/4145271758</string>
    <string name="ad_rewarded_1_id" translatable="false">ca-app-pub-6628325093439880/8486157233</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-6628325093439880~8565132642</string>
    <string name="app_name">Pointer Replacer</string>
    <string name="apply_pointer">Apply Pointer</string>
    <string name="button_text_learn_more">Learn More</string>
    <string name="change_color">Change Color</string>
    <string name="choose_color">Choose Color</string>
    <string name="dialog_button_install">Install</string>
    <string name="dialog_delete_confirm">Delete this Pointer?</string>
    <string name="dialog_msg_no_network">No Network Available. Please check connection and try again.</string>
    <string name="dialog_msg_sign_out">Do you want to Sign Out?</string>
    <string name="dialog_sign_out_result_success">Signed Out</string>
    <string name="dialog_title_confirmation">Are you sure?</string>
    <string name="dialog_title_no_network">No Network</string>
    <string name="dialog_title_select_mouse_pointer">Select Mouse Pointer</string>
    <string name="dialog_title_select_pointer">Select Pointers</string>
    <string name="dialog_title_sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enable_touches_prompt">Show touches disabled. Would you like to enable</string>
    <string name="fcm_channel_default">Updates</string>
    <string name="fcm_channel_id" translatable="false">fcm_default_channel</string>
    <string name="format_text_empty_error">%1$s can not be empty</string>
    <string name="format_text_downloads_and_date">"%1\$s • Uploaded %2\$s"</string>
    <string name="help">Help</string>
    <string name="helper_text_desc">Provide short info about pointer.</string>
    <string name="helper_text_name">Provide name of pointer.</string>
    <string name="import_pointer">Import Pointer</string>
    <string name="input_hint_desc">Description (optional)</string>
    <string name="input_hint_email">Email</string>
    <string name="input_hint_max_padding_size">Enter Max Padding Size</string>
    <string name="input_hint_name">Name</string>
    <string name="install_manage_pointers">Install Pointers</string>
    <string name="key_app_info" translatable="false">key_app_info</string>
    <string name="key_EnablePointerAlpha" translatable="false">keyEnablePointerAlpha</string>
    <string name="key_ext_dialog_cancel" translatable="false">ext_dialog_cancelled</string>
    <string name="key_licences" translatable="false">licenses</string>
    <string name="key_maxPaddingSize" translatable="false">maxPaddingSize</string>
    <string name="key_maxPointerSize" translatable="false">maxPointerSize</string>
    <string name="key_mouseAlpha">MOUSE_ALPHA</string>
    <string name="key_mouseColor">MOUSE_COLOR</string>
    <string name="key_mousePadding" translatable="false">MOUSE_PADDING</string>
    <string name="key_mousePath" translatable="false">MOUSE_PATH</string>
    <string name="key_mouseSize" translatable="false">MOUSE_SIZE</string>
    <string name="key_oldColor" translatable="false">OLD_COLOR</string>
    <string name="key_pointerAlpha">pointerAlpha</string>
    <string name="key_pointerColor">POINTER_COLOR</string>
    <string name="key_pointerPadding" translatable="false">pointer_padding</string>
    <string name="key_pointerPath" translatable="false">POINTER_PATH</string>
    <string name="key_pointerSize" translatable="false">POINTER_SIZE</string>
    <string name="key_pref_donate" translatable="false">pref_donate_dev</string>
    <string name="key_rate_on_g_play" translatable="false">pref_rate_on_g_play</string>
    <string name="key_repo_order_by">repo_order_by</string>
    <string name="key_saf_uri">saf_uri</string>
    <string name="key_selectedMouseName" translatable="false">SELECTED_MOUSE_NAME</string>
    <string name="key_selectedMousePath" translatable="false">SELECTED_MOUSE_PATH</string>
    <string name="key_selectedPointerName" translatable="false">SELECTED_POINTER_NAME</string>
    <string name="key_selectedPointerPath" translatable="false">SELECTED_POINTER_PATH</string>
    <string name="key_show_touches" translatable="false">show_touches</string>
    <string name="key_use_material_cc" translatable="false">use_md_cc</string>
    <string name="key_version" translatable="false">pref_version</string>
    <string name="key_watch_ads" translatable="false">pref_watch_ads</string>
    <string name="made_with_love">Made with ❤ In India.</string>
    <string name="main_fragment_transition" translatable="false">main_fragment_transition</string>
    <string name="module_description">Simple Module To Replace Touch Pointer. by sandipv22@xda.</string>
    <string name="mouse_pointer">Mouse Pointer</string>
    <string name="msg_ad_loaded">Ad Loaded</string>
    <string name="msg_ad_loading">Ad Loading</string>
    <string name="msg_ad_not_loaded">Ad Not Loaded yet</string>
    <string name="msg_delete_failed">Error deleting pointer</string>
    <string name="msg_delete_success">Pointer deleted</string>
    <string name="msg_done">Done</string>
    <string name="msg_downloading_ext">Downloading Extension</string>
    <string name="msg_error">Some Error occurred.</string>
    <string name="msg_ext_downloaded">Extension Downloaded</string>
    <string name="msg_grant_app_permissions">Please Grant Permissions</string>
    <string name="msg_input_error_description_empty">Description can not be empty</string>
    <string name="msg_input_error_name_empty">Pointer name can not be empty</string>
    <string name="msg_install_ext_dialog">Please install small extension package for changing system settings</string>
    <string name="msg_install_extension">Please install Extension First</string>
    <string name="msg_login_failed">Login Failed</string>
    <string name="msg_mouse_not_selected">Please Select Mouse Pointer first</string>
    <string name="msg_no_changes">No Changes to Save.</string>
    <string name="msg_no_pointers_installed">No Pointers Installed</string>
    <string name="msg_pointer_downloaded">Pointer Downloaded</string>
    <string name="msg_pointer_not_imported">Please import pointer image first.</string>
    <string name="msg_pointer_not_selected">Please Select Pointer first</string>
    <string name="msg_pointer_upload_success">Pointer Uploaded</string>
    <string name="msg_profile_updated">"Profile Updated"</string>
    <string name="msg_secure_settings_permission">Please grant app to write Secure Settings permission</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no_pointer_applied">No Pointer Applied.\nPlease Select and Apply Pointer</string>
    <string name="pointer_folder_name" translatable="false">Pointers</string>
    <string name="pointer_folder_path" translatable="false">/Pointer Replacer/Pointers/</string>
    <string name="pointer_folder_path_new" translatable="false">/Pointers/</string>
    <string name="pointer_grid_hint">Long press pointer for delete.</string>
    <string name="pointer_preview">Pointer Preview</string>
    <string name="pref_category_support">Support Development</string>
    <string name="pref_summary_donation">to support development</string>
    <string name="pref_summary_enable_alpha">Enables Slider to Change Pointer Alpha (transparency)</string>
    <string name="pref_summary_licences">Click to view licenses of third party libraries</string>
    <string name="pref_summary_source_code">tap to visit GitHub Repository</string>
    <string name="pref_summary_watch_ad">Support Development by Watching Ads</string>
    <string name="pref_summary_xda">tap to visit official XDA thread</string>
    <string name="pref_summary_xposed_repo">tap to open Xposed Module Repo</string>
    <string name="pref_title_donate_dev">Donate Developer</string>
    <string name="pref_title_enable_alpha">Enable Pointer Alpha</string>
    <string name="pref_title_licences">Licenses</string>
    <string name="pref_title_pointer_settings">Pointer Settings</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_title_rate_g_play">Rate on Google Play</string>
    <string name="pref_title_show_touches">Show Touches</string>
    <string name="pref_title_source_code">Source Code</string>
    <string name="pref_title_telegram_group">Join Telegram Group</string>
    <string name="pref_title_visit_ar">Visit AfterROOT</string>
    <string name="pref_title_watch_ad">Watch Ads to Support Development</string>
    <string name="pref_title_xda_thread">XDA Thread</string>
    <string name="pref_title_xposed_repo">Module Info</string>
    <string name="prompt_button_enable">ENABLE</string>
    <string name="reboot">Reboot</string>
    <string name="reset_color">Reset Color</string>
    <string name="reset_size">Reset Size &amp; Padding</string>
    <string name="str_format_uploaded_by">by %s</string>
    <string name="str_format_value_error">Value must be greater than %1$d</string>
    <string name="str_format_version">v%1$s (%2$d) - %3$s</string>
    <string name="tap_and_move_your_finger_to_see_preview">Tap and move your finger to see preview</string>
    <string name="text_action_apply">Apply</string>
    <string name="text_action_browse">Browse</string>
    <string name="text_action_customize">Customize</string>
    <string name="text_action_exit">Exit</string>
    <string name="text_action_grant">Grant</string>
    <string name="text_action_post">Post</string>
    <string name="text_action_retry">Retry</string>
    <string name="text_action_save">Save</string>
    <string name="text_action_upload">Upload</string>
    <string name="text_alpha">Alpha</string>
    <string name="text_apply_pointer_confirm">Do you want to apply this pointer?</string>
    <string name="text_browse_pointer_image">Choose Pointer Image to Upload</string>
    <string name="text_chip_sort_by_date">Sort by Date</string>
    <string name="text_chip_sort_by_downloads">Sort by Downloads</string>
    <string name="text_click_to_change_pointer">Click to Change Pointer</string>
    <string name="text_click_to_mouse">Click to change mouse pointer</string>
    <string name="text_color_changed">Pointer color changed.</string>
    <string name="text_color_changed_default">Color changed to Default</string>
    <string name="text_color_not_changed">Pointer color not changed.</string>
    <string name="text_cur_mouse">Current Mouse Pointer</string>
    <string name="text_cur_pointer">Current Pointer</string>
    <string name="text_delete">Delete</string>
    <string name="text_delete_confirm">Are you sure you want to delete this pointer??</string>
    <string name="text_download">Download</string>
    <string name="text_edit">Edit</string>
    <string name="text_installed">Installed</string>
    <string name="text_logout">Logout</string>
    <string name="text_max_padding_size">Max Padding Size</string>
    <string name="text_max_pointer_size">Max Pointer Size</string>
    <string name="text_will_change_to">New Pointer</string>
    <string name="transition_mouse" translatable="false">mouse_transition</string>
    <string name="url_prx" translatable="false">https://m8rg7.app.goo.gl/xposedRepo</string>
    <string name="url_source_code" translatable="false">https://m8rg7.app.goo.gl/sourceCode</string>
    <string name="url_xda_thread" translatable="false">https://m8rg7.app.goo.gl/pr_xda</string>
</resources>