<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016-2019 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="Pointer Settings">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="show_touches"
            app:title="Show Touches" />
        <Preference
            app:key="@string/key_maxPointerSize"
            app:title="@string/text_max_pointer_size" />
        <Preference
            app:key="@string/key_maxPaddingSize"
            app:title="@string/text_max_padding_size" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/key_EnablePointerAlpha"
            app:summary="Enables Slider to Change Pointer Alpha (transparency)"
            app:title="Enable Pointer Alpha" />
    </PreferenceCategory>
    <PreferenceCategory app:title="Color Picker">
        <Preference
            app:key="@string/key_use_material_cc"
            app:title="Change Color Picker" />
    </PreferenceCategory>
    <PreferenceCategory app:title="About">
        <Preference
            app:icon="@mipmap/ic_launcher"
            app:key="pref_version"
            app:summary="@string/version"
            app:title="@string/app_name" />
        <Preference
            android:key="licenses"
            android:summary="Click to view licenses of third party libraries"
            android:title="Licenses" />
        <Preference
            app:summary="tap to visit official XDA thread"
            app:title="@string/pref_title_xda_thread">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_xda_thread" />
        </Preference>
        <Preference
            app:summary="tap to visit GitHub Repository"
            app:title="@string/pref_title_source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_source_code" />
        </Preference>
        <Preference
            app:summary="tap to open Xposed Module Repo"
            app:title="@string/pref_title_xposed_repo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_prx" />
        </Preference>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>